- Sledgehammer durability increased to 4x diamond pickaxe - Mining animations - added - Chisel animation (when block can be chiseled) - added - Bugfixes - Versatility enchant - added (selects best tool for block when mining and sneaking) - Building Wand improvements

--- a/src/main/resources/assets/simplebuilding/lang/de_de.json
+++ b/src/main/resources/assets/simplebuilding/lang/de_de.json
@@ -7,7 +7,7 @@
   "item.simplebuilding.netherite_chisel": "Netheritmeißel",
 
   "tooltip.simplebuilding.chisel": "Benutzen, um Blöcke zu formen.",
-  "tooltip.simplebuilding.chisel.shift_down": "Rechtsklick auf einen verformbaren Block.",
+  "tooltip.simplebuilding.chisel.shift_down": "Rechtsklick auf einen veränderbaren Block.",
 
   "item.simplebuilding.stone_spatula": "Steinspachtel",
   "item.simplebuilding.copper_spatula": "Kupferspachtel",
@@ -17,7 +17,7 @@
   "item.simplebuilding.netherite_spatula": "Netheritspachtel",
 
   "tooltip.simplebuilding.spatula": "Benutzen, um Blöcke zu glätten.",
-  "tooltip.simplebuilding.spatula.shift_down": "Rechtsklick auf einen verformbaren Block.",
+  "tooltip.simplebuilding.spatula.shift_down": "Rechtsklick auf einen veränderbaren Block.",
 
   "item.simplebuilding.copper_core": "Kupferkern",
   "item.simplebuilding.iron_core": "Eisenkern",
@@ -25,24 +25,24 @@
   "item.simplebuilding.diamond_core": "Diamantkern",
   "item.simplebuilding.netherite_core": "Netheritkern",
 
-  "item.simplebuilding.copper_building_wand": "Kupfer-Baustab",
-  "item.simplebuilding.iron_building_wand": "Eisen-Baustab",
-  "item.simplebuilding.gold_building_wand": "Gold-Baustab",
-  "item.simplebuilding.diamond_building_wand": "Diamant-Baustab",
-  "item.simplebuilding.netherite_building_wand": "Netherit-Baustab",
-  "tooltip.simplebuilding.building_wand.size": "Platziert einen Bereich von %s x %s Blöcken.",
+  "item.simplebuilding.copper_building_wand": "Kupferbaustab",
+  "item.simplebuilding.iron_building_wand": "Eisenbaustab",
+  "item.simplebuilding.gold_building_wand": "Goldbaustab",
+  "item.simplebuilding.diamond_building_wand": "Diamantbaustab",
+  "item.simplebuilding.netherite_building_wand": "Netheritbaustab",
+  "tooltip.simplebuilding.building_wand.size": "Platziert eine Fläche von %s x %s Blöcken.",
   "tooltip.simplebuilding.building_wand.line_size": "Platziert eine Linie von %s Blöcken.",
 
   "item.simplebuilding.sledgehammer": "Vorschlaghammer",
-  "item.simplebuilding.stone_sledgehammer": "Stein-Vorschlaghammer",
-  "item.simplebuilding.copper_sledgehammer": "Kupfer-Vorschlaghammer",
-  "item.simplebuilding.iron_sledgehammer": "Eisen-Vorschlaghammer",
-  "item.simplebuilding.gold_sledgehammer": "Gold-Vorschlaghammer",
-  "item.simplebuilding.diamond_sledgehammer": "Diamant-Vorschlaghammer",
-  "item.simplebuilding.netherite_sledgehammer": "Netherit-Vorschlaghammer",
+  "item.simplebuilding.stone_sledgehammer": "Steinvorschlaghammer",
+  "item.simplebuilding.copper_sledgehammer": "Kupfervorschlaghammer",
+  "item.simplebuilding.iron_sledgehammer": "Eisenvorschlaghammer",
+  "item.simplebuilding.gold_sledgehammer": "Goldvorschlaghammer",
+  "item.simplebuilding.diamond_sledgehammer": "Diamantvorschlaghammer",
+  "item.simplebuilding.netherite_sledgehammer": "Netheritvorschlaghammer",
 
   "tooltip.simplebuilding.sledgehammer": "Benutzen, um mehrere Blöcke gleichzeitig abzubauen.",
-  "tooltip.simplebuilding.building_wand": "Benutzen, um mehr Blöcke gleichzeitig zu platzieren.",
+  "tooltip.simplebuilding.building_wand": "Benutzen, um mehrere Blöcke gleichzeitig zu platzieren.",
 
   "message.simplebuilding.set_pos1_first": "1:",
   "message.simplebuilding.pos1_set": "1:",
@@ -50,7 +50,7 @@
 
   "item.simplebuilding.octant": "Oktant",
   "item.simplebuilding.octant_white": "Weißer Oktant",
-  "item.simplebuilding.octant_orange": "Orangefarbener Oktant",
+  "item.simplebuilding.octant_orange": "Oranger Oktant",
   "item.simplebuilding.octant_magenta": "Magenta Oktant",
   "item.simplebuilding.octant_light_blue": "Hellblauer Oktant",
   "item.simplebuilding.octant_yellow": "Gelber Oktant",
@@ -67,33 +67,31 @@
   "item.simplebuilding.octant_black": "Schwarzer Oktant",
 
   "item.simplebuilding.reinforced_bundle": "Verstärktes Bündel",
-  "tooltip.simplebuilding.reinforced_bundle": "Kann mehr Items halten, wenn verzaubert.",
-  "item.simplebuilding.netherite_bundle": "Netherit-Bündel",
-  "tooltip.simplebuilding.netherite_bundle": "Kann noch mehr Items halten, wenn verzaubert.",
+  "tooltip.simplebuilding.reinforced_bundle": "Kann mit Verzauberung mehr Items halten.",
+  "item.simplebuilding.netherite_bundle": "Netheritbündel",
+  "tooltip.simplebuilding.netherite_bundle": "Kann mit Verzauberung noch mehr Items halten.",
 
   "item.simplebuilding.quiver": "Köcher",
   "tooltip.simplebuilding.quiver": "Hält Pfeile. Funktioniert in der Nebenhand oder im Brustpanzer-Slot.",
-  "item.simplebuilding.netherite_quiver": "Netherit-Köcher",
+  "item.simplebuilding.netherite_quiver": "Netheritköcher",
   "tooltip.simplebuilding.netherite_quiver": "Hält mehr Pfeile. Funktioniert in der Nebenhand oder im Brustpanzer-Slot.",
 
   "item.simplebuilding.velocity-gauge": "Geschwindigkeitsmesser",
   "tooltip.simplebuilding.velocity-gauge.tooltip": "Zeigt die aktuelle Geschwindigkeit des Spielers an.",
 
-  "itemgroup.simplebuilding.building_items": "Baugegenstände",
+  "itemgroup.simplebuilding.building_items": "Building Items",
 
   "enchantment.simplebuilding.fast_chiseling": "Schnelles Meißeln",
-  "enchantment.simplebuilding.constructors_touch": "Berührung des Konstrukteurs",
+  "enchantment.simplebuilding.constructors_touch": "Konstrukteurs-Griff",
   "enchantment.simplebuilding.range": "Reichweite",
 
   "enchantment.simplebuilding.deep_pockets": "Tiefe Taschen",
   "enchantment.simplebuilding.master_builder": "Baumeister",
-  "enchantment.simplebuilding.color_palette": "Farbpalette",
   "enchantment.simplebuilding.funnel": "Trichter",
   "enchantment.simplebuilding.quiver": "Köcher",
-  "enchantment.simplebuilding.break_through": "Durchbruch",
   "enchantment.simplebuilding.override": "Überschreiben",
   "enchantment.simplebuilding.radius": "Radius",
-  "enchantment.simplebuilding.strip_miner": "Streifenminer",
+  "enchantment.simplebuilding.strip_miner": "Tunnelgräber",
   "enchantment.simplebuilding.vein_miner": "Ader-Abbau",
   "enchantment.simplebuilding.kinetic_protection": "Kinetischer Schutz",
   "enchantment.simplebuilding.cover": "Abdecken",
@@ -101,12 +99,17 @@
   "enchantment.simplebuilding.linear": "Linear",
   "enchantment.simplebuilding.tailwind": "Rückenwind",
   "enchantment.simplebuilding.tailwind.description": "Erhöht die Geschwindigkeit von gerittenen Mobs.",
-  "enchantment.simplebuilding.leaping": "Springen",
+  "enchantment.simplebuilding.leaping": "Sprungkraft",
   "enchantment.simplebuilding.leaping.description": "Erhöht die Sprunghöhe von gerittenen Pferden.",
-  "enchantment.simplebuilding.double_jump": "Doppelsprung",
-  "enchantment.simplebuilding.double_jump.description": "Erlaubt dem Spieler einen zusätzlichen Sprung.",
-  "enchantment.simplebuilding.drawer": "Schublade",
-  "enchantment.simplebuilding.drawer.description": "Erhöht die Kapazität von Bündeln und Verstärkten Bündeln.",
+  "enchantment.simplebuilding.drawer": "Stauraum",
+  "enchantment.simplebuilding.drawer.description": "Erhöht die Lagerkapazität von Kisten und Bündeln.",
+  "enchantment.simplebuilding.versatility": "Vielseitigkeit",
+  "enchantment.simplebuilding.versatility.desc": "Wechselt beim Schleichen zum besten Werkzeug.",
+
+  "enchantment.simplebuilding.break_through": "Durchbruch",
+  "enchantment.simplebuilding.color_palette": "Farbpalette",
+  "enchantment.simplebuilding.double_jump": "Luftsprung",
+  "enchantment.simplebuilding.double_jump.description": "Erlaubt dem Spieler einen zusätzlichen Sprung in der Luft.",
 
   "container.enchantments": "Verzauberungen",
   "enchantment.level.1": "I",
@@ -115,62 +118,66 @@
   "enchantment.level.4": "IV",
   "enchantment.level.5": "V",
 
-  "text.autoconfig.simplebuilding.option.tools": "Werkzeugeinstellungen",
-  "text.autoconfig.simplebuilding.option.tools.invertOctantSneak": "Oktant Schleichen umkehren",
-  "text.autoconfig.simplebuilding.option.tools.invertOctantSneak.@Tooltip": "Wenn aktiv, zeigt der Oktant den gefüllten Bereich an, wenn man NICHT schleicht (mit Constructor's Touch).",
-  "text.autoconfig.simplebuilding.option.tools.BuildingHighlightOpacity": "Baustab Hervorhebung Deckkraft",
-  "text.autoconfig.simplebuilding.option.tools.BuildingHighlightOpacity.@Tooltip": "Deckkraft der Baustab-Blockhervorhebung (0.0 - 1.0).",
+  "text.autoconfig.simplebuilding.option.tools": "Werkzeug-Einstellungen",
+  "text.autoconfig.simplebuilding.option.tools.invertOctantSneak": "Oktant-Schleichen umkehren",
+  "text.autoconfig.simplebuilding.option.tools.invertOctantSneak.@Tooltip": "Wenn aktiv, zeigt der Oktant den gefüllten Bereich an, wenn NICHT geschlichen wird (mit Konstrukteurs-Griff).",
+  "text.autoconfig.simplebuilding.option.tools.BuildingHighlightOpacity": "Baustab-Hervorhebung Deckkraft",
+  "text.autoconfig.simplebuilding.option.tools.BuildingHighlightOpacity.@Tooltip": "Deckkraft der Block-Vorschau des Baustabs (0.0 - 1.0).",
+  "text.autoconfig.simplebuilding.option.tools.enableToolAnimations": "Werkzeug-Animationen aktivieren",
+  "text.autoconfig.simplebuilding.option.tools.enableToolAnimations.@Tooltip": "Schaltet eigene Werkzeug-Animationen wie die Meißel-Rotation ein/aus.",
+  "text.autoconfig.simplebuilding.option.tools.enableChiselAnimation": "Meißel-Animation aktivieren",
+  "text.autoconfig.simplebuilding.option.tools.enableChiselAnimation.@Tooltip": "Spezifischer Schalter für das visuelle Feedback des Meißels.",
 
   "text.autoconfig.simplebuilding.option.worldGen": "Weltgenerierung & Wirtschaft",
   "text.autoconfig.simplebuilding.option.worldGen.enableVillagerTrades": "Dorfbewohner-Handel aktivieren",
-  "text.autoconfig.simplebuilding.option.worldGen.enableVillagerTrades.@Tooltip": "Fügt Meißel- und Baustab-Handel zu Dorfbewohnern hinzu.",
-  "text.autoconfig.simplebuilding.option.worldGen.enableWanderingTrades": "Fahrender Händler aktivieren",
-  "text.autoconfig.simplebuilding.option.worldGen.enableWanderingTrades.@Tooltip": "Fügt Meißel- und Baustab-Handel zum Fahrenden Händler hinzu.",
-  "text.autoconfig.simplebuilding.option.worldGen.enableLootTableChanges": "Beutetruhen aktivieren",
-  "text.autoconfig.simplebuilding.option.worldGen.enableLootTableChanges.@Tooltip": "Fügt Gegenstände zu Dungeon-/Strukturtruhen hinzu.",
+  "text.autoconfig.simplebuilding.option.worldGen.enableVillagerTrades.@Tooltip": "Fügt Meißel und Baustäbe zum Handel bei Dorfbewohnern hinzu.",
+  "text.autoconfig.simplebuilding.option.worldGen.enableWanderingTrades": "Wandernder Händler aktivieren",
+  "text.autoconfig.simplebuilding.option.worldGen.enableWanderingTrades.@Tooltip": "Fügt Meißel und Baustäbe zum Handel beim wandernden Händler hinzu.",
+  "text.autoconfig.simplebuilding.option.worldGen.enableLootTableChanges": "Beutekisten aktivieren",
+  "text.autoconfig.simplebuilding.option.worldGen.enableLootTableChanges.@Tooltip": "Fügt Items zu Kisten in Dungeons/Strukturen hinzu.",
 
   "text.autoconfig.simplebuilding.option.enchantments": "Verzauberungs-Balancing",
-  "text.autoconfig.simplebuilding.option.enchantments.swiftRide": "Rückenwind Einstellungen",
+  "text.autoconfig.simplebuilding.option.enchantments.swiftRide": "Einstellungen für Schneller Ritt",
 
-  "text.autoconfig.simplebuilding.option.enchantments.swiftRide.ghastSpeedMultiplier": "Ghast Geschwindigkeitsboost",
-  "text.autoconfig.simplebuilding.option.enchantments.swiftRide.ghastSpeedMultiplier.@Tooltip": "Geschwindigkeitsmultiplikator pro Verzauberungsstufe für glückliche Ghasts (Standard: 0.40).",
+  "text.autoconfig.simplebuilding.option.enchantments.swiftRide.ghastSpeedMultiplier": "Ghast Geschwindigkeits-Boost",
+  "text.autoconfig.simplebuilding.option.enchantments.swiftRide.ghastSpeedMultiplier.@Tooltip": "Geschwindigkeits-Multiplikator pro Verzauberungs-Stufe für Glückliche Ghasts (Standard: 0.40).",
 
-  "text.autoconfig.simplebuilding.option.enchantments.swiftRide.horseSpeedMultiplier": "Pferde Geschwindigkeitsboost",
-  "text.autoconfig.simplebuilding.option.enchantments.swiftRide.horseSpeedMultiplier.@Tooltip": "Geschwindigkeitsmultiplikator pro Verzauberungsstufe für Pferde (Standard: 0.12).",
+  "text.autoconfig.simplebuilding.option.enchantments.swiftRide.horseSpeedMultiplier": "Pferde Geschwindigkeits-Boost",
+  "text.autoconfig.simplebuilding.option.enchantments.swiftRide.horseSpeedMultiplier.@Tooltip": "Geschwindigkeits-Multiplikator pro Verzauberungs-Stufe für Pferde (Standard: 0.12).",
 
-  "text.autoconfig.simplebuilding.option.enchantments.swiftRide.otherSpeedMultiplier": "Sonstige Mobs Geschwindigkeitsboost",
-  "text.autoconfig.simplebuilding.option.enchantments.swiftRide.otherSpeedMultiplier.@Tooltip": "Geschwindigkeitsmultiplikator pro Verzauberungsstufe für Schweine/Schreiter (Standard: 0.15).",
+  "text.autoconfig.simplebuilding.option.enchantments.swiftRide.otherSpeedMultiplier": "Sonstige Mobs Speed Boost",
+  "text.autoconfig.simplebuilding.option.enchantments.swiftRide.otherSpeedMultiplier.@Tooltip": "Geschwindigkeits-Multiplikator pro Verzauberungs-Stufe für Schweine/Schreiter (Standard: 0.15).",
 
-  "text.autoconfig.simplebuilding.option.enchantments.horseJump": "Pferdesprung Einstellungen",
-  "text.autoconfig.simplebuilding.option.enchantments.horseJump.jumpStrengthMultiplier": "Sprungkraft Boost",
-  "text.autoconfig.simplebuilding.option.enchantments.horseJump.jumpStrengthMultiplier.@Tooltip": "Sprungkraftmultiplikator pro Verzauberungsstufe auf Pferderüstung (Standard: 0.20).",
+  "text.autoconfig.simplebuilding.option.enchantments.horseJump": "Einstellungen für Pferdesprung",
+  "text.autoconfig.simplebuilding.option.enchantments.horseJump.jumpStrengthMultiplier": "Sprungkraft-Boost",
+  "text.autoconfig.simplebuilding.option.enchantments.horseJump.jumpStrengthMultiplier.@Tooltip": "Sprungkraft-Multiplikator pro Verzauberungs-Stufe auf Pferderüstung (Standard: 0.20).",
 
   "block.simplebuilding.reinforced_chest": "Verstärkte Truhe",
   "item.simplebuilding.reinforced_chest": "Verstärkte Truhe",
-  "block.simplebuilding.netherite_chest": "Netherit-Truhe",
-    "item.simplebuilding.netherite_chest": "Netherit-Truhe",
+  "block.simplebuilding.netherite_chest": "Netherittruhe",
+  "item.simplebuilding.netherite_chest": "Netherittruhe",
 
   "block.simplebuilding.reinforced_hopper": "Verstärkter Trichter",
   "item.simplebuilding.reinforced_hopper": "Verstärkter Trichter",
-  "block.simplebuilding.netherite_hopper": "Netherit-Trichter",
-    "item.simplebuilding.netherite_hopper": "Netherit-Trichter",
+  "block.simplebuilding.netherite_hopper": "Netherittrichter",
+  "item.simplebuilding.netherite_hopper": "Netherittrichter",
 
   "block.simplebuilding.reinforced_piston": "Verstärkter Kolben",
   "item.simplebuilding.reinforced_piston": "Verstärkter Kolben",
-  "block.simplebuilding.netherite_piston": "Netherit-Kolben",
-    "item.simplebuilding.netherite_piston": "Netherit-Kolben",
-  "tooltip.simplebuilding.netherite_piston": "Baut Blöcke basierend auf Redstone-Signalstärke ab (1-15).",
+  "block.simplebuilding.netherite_piston": "Netheritkolben",
+  "item.simplebuilding.netherite_piston": "Netheritkolben",
+  "tooltip.simplebuilding.netherite_piston": "Baut Blöcke basierend auf Redstone-Stärke (1-15) ab.",
 
-  "block.simplebuilding.reinforced_blast_furnace": "Verstärkter Hochofen",
-  "container.simplebuilding.reinforced_blast_furnace": "Verstärkter Hochofen",
-    "item.simplebuilding.reinforced_blast_furnace": "Verstärkter Hochofen",
-  "container.simplebuilding.netherite_blast_furnace": "Netherit-Hochofen",
-  "block.simplebuilding.netherite_blast_furnace": "Netherit-Hochofen",
-    "item.simplebuilding.netherite_blast_furnace": "Netherit-Hochofen",
+  "block.simplebuilding.reinforced_blast_furnace": "Verstärkter Schmelzofen",
+  "container.simplebuilding.reinforced_blast_furnace": "Verstärkter Schmelzofen",
+  "item.simplebuilding.reinforced_blast_furnace": "Verstärkter Schmelzofen",
+  "container.simplebuilding.netherite_blast_furnace": "Netheritschmelzofen",
+  "block.simplebuilding.netherite_blast_furnace": "Netheritschmelzofen",
+  "item.simplebuilding.netherite_blast_furnace": "Netheritschmelzofen",
 
   "item.simplebuilding.construction_light": "Baulicht",
 
-  "item.simplebuilding.diamond_pebble": "Diamant-Splitt",
+  "item.simplebuilding.diamond_pebble": "Diamantkiesel",
   "item.simplebuilding.cracked_diamond": "Rissiger Diamant",
   "item.simplebuilding.cracked_diamond_block": "Rissiger Diamantblock"
 }
