some bugfixes and lang files updated

--- a/src/main/resources/assets/simplebuilding/lang/de_de.json
+++ b/src/main/resources/assets/simplebuilding/lang/de_de.json
@@ -31,7 +31,7 @@
   "item.simplebuilding.diamond_building_wand": "Diamantbaustab",
   "item.simplebuilding.netherite_building_wand": "Netheritbaustab",
   "tooltip.simplebuilding.building_wand.size": "Platziert eine Fläche von %s x %s Blöcken.",
-  "tooltip.simplebuilding.building_wand.line_size": "Platziert eine Linie von %s Blöcken.",
+  "tooltip.simplebuilding.building_wand.line_size": "Platziert eine Reihe von %s Blöcken.",
 
   "item.simplebuilding.sledgehammer": "Vorschlaghammer",
   "item.simplebuilding.stone_sledgehammer": "Steinvorschlaghammer",
@@ -42,7 +42,7 @@
   "item.simplebuilding.netherite_sledgehammer": "Netheritvorschlaghammer",
 
   "tooltip.simplebuilding.sledgehammer": "Benutzen, um mehrere Blöcke gleichzeitig abzubauen.",
-  "tooltip.simplebuilding.building_wand": "Benutzen, um mehrere Blöcke gleichzeitig zu platzieren.",
+  "tooltip.simplebuilding.building_wand": "Benutzen, um mehr Blöcke auf einmal zu platzieren.",
 
   "message.simplebuilding.set_pos1_first": "1:",
   "message.simplebuilding.pos1_set": "1:",
@@ -67,9 +67,9 @@
   "item.simplebuilding.octant_black": "Schwarzer Oktant",
 
   "item.simplebuilding.reinforced_bundle": "Verstärktes Bündel",
-  "tooltip.simplebuilding.reinforced_bundle": "Kann mit Verzauberung mehr Items halten.",
+  "tooltip.simplebuilding.reinforced_bundle": "Kann verzaubert mehr Gegenstände halten.",
   "item.simplebuilding.netherite_bundle": "Netheritbündel",
-  "tooltip.simplebuilding.netherite_bundle": "Kann mit Verzauberung noch mehr Items halten.",
+  "tooltip.simplebuilding.netherite_bundle": "Kann verzaubert noch mehr Gegenstände halten.",
 
   "item.simplebuilding.quiver": "Köcher",
   "tooltip.simplebuilding.quiver": "Hält Pfeile. Funktioniert in der Nebenhand oder im Brustpanzer-Slot.",
@@ -79,37 +79,51 @@
   "item.simplebuilding.velocity-gauge": "Geschwindigkeitsmesser",
   "tooltip.simplebuilding.velocity-gauge.tooltip": "Zeigt die aktuelle Geschwindigkeit des Spielers an.",
 
-  "itemgroup.simplebuilding.building_items": "Building Items",
+  "itemgroup.simplebuilding.building_items": "Baugegenstände",
 
   "enchantment.simplebuilding.fast_chiseling": "Schnelles Meißeln",
-  "enchantment.simplebuilding.constructors_touch": "Konstrukteurs-Griff",
+  "enchantment.simplebuilding.constructors_touch": "Berührung des Konstrukteurs",
   "enchantment.simplebuilding.range": "Reichweite",
 
   "enchantment.simplebuilding.deep_pockets": "Tiefe Taschen",
-  "enchantment.simplebuilding.master_builder": "Baumeister",
+  "enchantment.simplebuilding.deep_pockets.description": "Erhöht die Kapazität von Bündeln.",
+  "enchantment.simplebuilding.master_builder": "Meisterbauer",
+  "enchantment.simplebuilding.master_builder.description": "Vergrößert den Wirkungsbereich von Baustäben.",
   "enchantment.simplebuilding.funnel": "Trichter",
+  "enchantment.simplebuilding.funnel.description": "Füllt Baustäbe automatisch aus dem Inventar auf.",
   "enchantment.simplebuilding.quiver": "Köcher",
+  "enchantment.simplebuilding.quiver.description": "Erhöht die Kapazität von Köchern.",
   "enchantment.simplebuilding.override": "Überschreiben",
+  "enchantment.simplebuilding.override.description": "Erlaubt das Platzieren von Blöcken, die normalerweise nicht platziert werden können.",
   "enchantment.simplebuilding.radius": "Radius",
-  "enchantment.simplebuilding.strip_miner": "Tunnelgräber",
-  "enchantment.simplebuilding.vein_miner": "Ader-Abbau",
-  "enchantment.simplebuilding.kinetic_protection": "Kinetischer Schutz",
-  "enchantment.simplebuilding.cover": "Abdecken",
+  "enchantment.simplebuilding.radius.description": "Vergrößert den Wirkungsbereich von Vorschlaghämmern.",
+  "enchantment.simplebuilding.strip_miner": "Streifenabbau",
+  "enchantment.simplebuilding.strip_miner.description": "Baut beim Schleichen einen 3x3-Bereich ab.",
+  "enchantment.simplebuilding.vein_miner": "Aderabbau",
+  "enchantment.simplebuilding.vein_miner.description": "Baut beim Schleichen alle verbundenen Blöcke desselben Typs ab.",
+  "enchantment.simplebuilding.kinetic_protection": "Kinetikschutz",
+  "enchantment.simplebuilding.kinetic_protection.description": "Reduziert Fallschaden, wenn verzauberte Rüstung getragen wird.",
+  "enchantment.simplebuilding.cover": "Abdeckung",
+  "enchantment.simplebuilding.cover.description": "Füllt gemeißelte Blöcke beim Platzieren automatisch auf.",
   "enchantment.simplebuilding.bridge": "Brücke",
+  "enchantment.simplebuilding.bridge.description": "Platziert beim Schleichen Blöcke unter dem Spieler.",
   "enchantment.simplebuilding.linear": "Linear",
+  "enchantment.simplebuilding.linear.description": "Platziert beim Schleichen Blöcke in einer geraden Linie.",
   "enchantment.simplebuilding.tailwind": "Rückenwind",
   "enchantment.simplebuilding.tailwind.description": "Erhöht die Geschwindigkeit von gerittenen Mobs.",
   "enchantment.simplebuilding.leaping": "Sprungkraft",
   "enchantment.simplebuilding.leaping.description": "Erhöht die Sprunghöhe von gerittenen Pferden.",
-  "enchantment.simplebuilding.drawer": "Stauraum",
-  "enchantment.simplebuilding.drawer.description": "Erhöht die Lagerkapazität von Kisten und Bündeln.",
+  "enchantment.simplebuilding.drawer": "Fassungsvermögen",
+  "enchantment.simplebuilding.drawer.description": "Erhöht die Lagerkapazität von Truhen und Bündeln.",
   "enchantment.simplebuilding.versatility": "Vielseitigkeit",
-  "enchantment.simplebuilding.versatility.desc": "Wechselt beim Schleichen zum besten Werkzeug.",
+  "enchantment.simplebuilding.versatility.description": "Erlaubt dem Werkzeug, auf mehr Blocktypen zu wirken.",
 
   "enchantment.simplebuilding.break_through": "Durchbruch",
+  "enchantment.simplebuilding.break_through.description": "Erlaubt dem Vorschlaghammer, Blöcke zu brechen, die normalerweise unzerstörbar sind.",
   "enchantment.simplebuilding.color_palette": "Farbpalette",
+  "enchantment.simplebuilding.color_palette.description": "Erlaubt dem Meißel, mehr Blocktypen basierend auf Farbstoffen zu transformieren.",
   "enchantment.simplebuilding.double_jump": "Luftsprung",
-  "enchantment.simplebuilding.double_jump.description": "Erlaubt dem Spieler einen zusätzlichen Sprung in der Luft.",
+  "enchantment.simplebuilding.double_jump.description": "Erlaubt dem Spieler, einen zusätzlichen Sprung auszuführen.",
 
   "container.enchantments": "Verzauberungen",
   "enchantment.level.1": "I",
@@ -118,39 +132,48 @@
   "enchantment.level.4": "IV",
   "enchantment.level.5": "V",
 
-  "text.autoconfig.simplebuilding.option.tools": "Werkzeug-Einstellungen",
+  "text.autoconfig.simplebuilding.option.tools": "Werkzeugeinstellungen",
   "text.autoconfig.simplebuilding.option.tools.invertOctantSneak": "Oktant-Schleichen umkehren",
-  "text.autoconfig.simplebuilding.option.tools.invertOctantSneak.@Tooltip": "Wenn aktiv, zeigt der Oktant den gefüllten Bereich an, wenn NICHT geschlichen wird (mit Konstrukteurs-Griff).",
-  "text.autoconfig.simplebuilding.option.tools.BuildingHighlightOpacity": "Baustab-Hervorhebung Deckkraft",
-  "text.autoconfig.simplebuilding.option.tools.BuildingHighlightOpacity.@Tooltip": "Deckkraft der Block-Vorschau des Baustabs (0.0 - 1.0).",
-  "text.autoconfig.simplebuilding.option.tools.enableToolAnimations": "Werkzeug-Animationen aktivieren",
-  "text.autoconfig.simplebuilding.option.tools.enableToolAnimations.@Tooltip": "Schaltet eigene Werkzeug-Animationen wie die Meißel-Rotation ein/aus.",
+  "text.autoconfig.simplebuilding.option.tools.invertOctantSneak.@Tooltip": "Wenn wahr, rendert der Oktant den gefüllten Bereich, wenn man NICHT schleicht (mit Berührung des Konstrukteurs).",
+  "text.autoconfig.simplebuilding.option.tools.BuildingHighlightOpacity": "Baustab-Hervorhebungsdeckkraft",
+  "text.autoconfig.simplebuilding.option.tools.BuildingHighlightOpacity.@Tooltip": "Deckkraft der Block-Hervorhebung des Baustabs (0.0 - 1.0).",
+
+  "text.autoconfig.simplebuilding.option.tools.enableToolAnimations": "Werkzeuganimationen aktivieren",
+  "text.autoconfig.simplebuilding.option.tools.enableToolAnimations.@Tooltip": "Schaltet benutzerdefinierte Werkzeuganimationen wie die Meißel-Rotation um.",
   "text.autoconfig.simplebuilding.option.tools.enableChiselAnimation": "Meißel-Animation aktivieren",
   "text.autoconfig.simplebuilding.option.tools.enableChiselAnimation.@Tooltip": "Spezifischer Schalter für das visuelle Feedback des Meißels.",
 
   "text.autoconfig.simplebuilding.option.worldGen": "Weltgenerierung & Wirtschaft",
   "text.autoconfig.simplebuilding.option.worldGen.enableVillagerTrades": "Dorfbewohner-Handel aktivieren",
-  "text.autoconfig.simplebuilding.option.worldGen.enableVillagerTrades.@Tooltip": "Fügt Meißel und Baustäbe zum Handel bei Dorfbewohnern hinzu.",
-  "text.autoconfig.simplebuilding.option.worldGen.enableWanderingTrades": "Wandernder Händler aktivieren",
-  "text.autoconfig.simplebuilding.option.worldGen.enableWanderingTrades.@Tooltip": "Fügt Meißel und Baustäbe zum Handel beim wandernden Händler hinzu.",
-  "text.autoconfig.simplebuilding.option.worldGen.enableLootTableChanges": "Beutekisten aktivieren",
-  "text.autoconfig.simplebuilding.option.worldGen.enableLootTableChanges.@Tooltip": "Fügt Items zu Kisten in Dungeons/Strukturen hinzu.",
+  "text.autoconfig.simplebuilding.option.worldGen.enableVillagerTrades.@Tooltip": "Fügt Meißel- und Baustab-Handel zu Dorfbewohnern hinzu.",
+  "text.autoconfig.simplebuilding.option.worldGen.enableWanderingTrades": "Fahrender Händler aktivieren",
+  "text.autoconfig.simplebuilding.option.worldGen.enableWanderingTrades.@Tooltip": "Fügt Meißel- und Baustab-Handel zu Fahrenden Händlern hinzu.",
+  "text.autoconfig.simplebuilding.option.worldGen.enableLootTableChanges": "Beutetruhen aktivieren",
+  "text.autoconfig.simplebuilding.option.worldGen.enableLootTableChanges.@Tooltip": "Fügt Gegenstände zu Dungeon-/Strukturtruhen hinzu.",
 
   "text.autoconfig.simplebuilding.option.enchantments": "Verzauberungs-Balancing",
-  "text.autoconfig.simplebuilding.option.enchantments.swiftRide": "Einstellungen für Schneller Ritt",
+  "text.autoconfig.simplebuilding.option.enchantments.swiftRide": "Einstellungen für 'Schneller Ritt'",
 
-  "text.autoconfig.simplebuilding.option.enchantments.swiftRide.ghastSpeedMultiplier": "Ghast Geschwindigkeits-Boost",
-  "text.autoconfig.simplebuilding.option.enchantments.swiftRide.ghastSpeedMultiplier.@Tooltip": "Geschwindigkeits-Multiplikator pro Verzauberungs-Stufe für Glückliche Ghasts (Standard: 0.40).",
+  "text.autoconfig.simplebuilding.option.enchantments.swiftRide.ghastSpeedMultiplier": "Ghast-Geschwindigkeitsschub",
+  "text.autoconfig.simplebuilding.option.enchantments.swiftRide.ghastSpeedMultiplier.@Tooltip": "Geschwindigkeitsmultiplikator pro Verzauberungsstufe für Glückliche Ghasts (Standard: 0.40).",
 
-  "text.autoconfig.simplebuilding.option.enchantments.swiftRide.horseSpeedMultiplier": "Pferde Geschwindigkeits-Boost",
-  "text.autoconfig.simplebuilding.option.enchantments.swiftRide.horseSpeedMultiplier.@Tooltip": "Geschwindigkeits-Multiplikator pro Verzauberungs-Stufe für Pferde (Standard: 0.12).",
+  "text.autoconfig.simplebuilding.option.enchantments.swiftRide.horseSpeedMultiplier": "Pferde-Geschwindigkeitsschub",
+  "text.autoconfig.simplebuilding.option.enchantments.swiftRide.horseSpeedMultiplier.@Tooltip": "Geschwindigkeitsmultiplikator pro Verzauberungsstufe für Pferde (Standard: 0.12).",
 
-  "text.autoconfig.simplebuilding.option.enchantments.swiftRide.otherSpeedMultiplier": "Sonstige Mobs Speed Boost",
-  "text.autoconfig.simplebuilding.option.enchantments.swiftRide.otherSpeedMultiplier.@Tooltip": "Geschwindigkeits-Multiplikator pro Verzauberungs-Stufe für Schweine/Schreiter (Standard: 0.15).",
+  "text.autoconfig.simplebuilding.option.enchantments.swiftRide.otherSpeedMultiplier": "Mob-Geschwindigkeitsschub (Andere)",
+  "text.autoconfig.simplebuilding.option.enchantments.swiftRide.otherSpeedMultiplier.@Tooltip": "Geschwindigkeitsmultiplikator pro Verzauberungsstufe für Schweine/Schreiter (Standard: 0.15).",
 
-  "text.autoconfig.simplebuilding.option.enchantments.horseJump": "Einstellungen für Pferdesprung",
-  "text.autoconfig.simplebuilding.option.enchantments.horseJump.jumpStrengthMultiplier": "Sprungkraft-Boost",
-  "text.autoconfig.simplebuilding.option.enchantments.horseJump.jumpStrengthMultiplier.@Tooltip": "Sprungkraft-Multiplikator pro Verzauberungs-Stufe auf Pferderüstung (Standard: 0.20).",
+  "text.autoconfig.simplebuilding.option.enchantments.horseJump": "Pferdesprung-Einstellungen",
+  "text.autoconfig.simplebuilding.option.enchantments.horseJump.jumpStrengthMultiplier": "Sprungstärke-Schub",
+  "text.autoconfig.simplebuilding.option.enchantments.horseJump.jumpStrengthMultiplier.@Tooltip": "Sprungstärkemultiplikator pro Verzauberungsstufe auf Pferderüstung (Standard: 0.20).",
+
+  "text.autoconfig.simplebuilding.option.tools.buildingHighlightOpacity": "Baustab-Hervorhebungsdeckkraft",
+
+  "text.autoconfig.simplebuilding.option.tools.invertBundleInteractions": "Bündel-Interaktionen umkehren",
+  "text.autoconfig.simplebuilding.option.tools.invertBundleInteractions.@Tooltip": "Wenn wahr, führt Schleichen bei der Verwendung von Bündeln die gegenteilige Aktion aus (Einlegen vs. Entnehmen).",
+
+  "text.autoconfig.simplebuilding.option.disableDoubleJump": "Doppelsprung deaktivieren",
+  "text.autoconfig.simplebuilding.option.tools.disableDoubleJump.@Tooltip": "Wenn wahr, wird die Luftsprung-Verzauberung deaktiviert.",
 
   "block.simplebuilding.reinforced_chest": "Verstärkte Truhe",
   "item.simplebuilding.reinforced_chest": "Verstärkte Truhe",
@@ -166,7 +189,7 @@
   "item.simplebuilding.reinforced_piston": "Verstärkter Kolben",
   "block.simplebuilding.netherite_piston": "Netheritkolben",
   "item.simplebuilding.netherite_piston": "Netheritkolben",
-  "tooltip.simplebuilding.netherite_piston": "Baut Blöcke basierend auf Redstone-Stärke (1-15) ab.",
+  "tooltip.simplebuilding.netherite_piston": "Baut Blöcke basierend auf Redstone-Stärke ab (1-15).",
 
   "block.simplebuilding.reinforced_blast_furnace": "Verstärkter Schmelzofen",
   "container.simplebuilding.reinforced_blast_furnace": "Verstärkter Schmelzofen",
