--- a/src/main/resources/assets/simplebuilding/lang/en_us.json
+++ b/src/main/resources/assets/simplebuilding/lang/en_us.json
@@ -86,17 +86,29 @@
   "enchantment.simplebuilding.range": "Range",
 
   "enchantment.simplebuilding.deep_pockets": "Deep Pockets",
+  "enchantment.simplebuilding.deep_pockets.description": "Increases the capacity of bundles.",
   "enchantment.simplebuilding.master_builder": "Master Builder",
+    "enchantment.simplebuilding.master_builder.description": "Increases the area of effect for building wands.",
   "enchantment.simplebuilding.funnel": "Funnel",
+    "enchantment.simplebuilding.funnel.description": "Automatically fills building wands from your inventory.",
   "enchantment.simplebuilding.quiver": "Quiver",
+    "enchantment.simplebuilding.quiver.description": "Increases the capacity of quivers.",
   "enchantment.simplebuilding.override": "Override",
+    "enchantment.simplebuilding.override.description": "Allows placement of blocks that normally cannot be placed.",
   "enchantment.simplebuilding.radius": "Radius",
+    "enchantment.simplebuilding.radius.description": "Increases the area of effect for sledgehammers.",
   "enchantment.simplebuilding.strip_miner": "Strip Miner",
+    "enchantment.simplebuilding.strip_miner.description": "Mines a 3x3 area when sneaking.",
   "enchantment.simplebuilding.vein_miner": "Vein Miner",
+    "enchantment.simplebuilding.vein_miner.description": "Mines all connected blocks of the same type when sneaking.",
   "enchantment.simplebuilding.kinetic_protection": "Kinetic Protection",
+    "enchantment.simplebuilding.kinetic_protection.description": "Reduces fall damage when wearing enchanted armor.",
   "enchantment.simplebuilding.cover": "Cover",
+    "enchantment.simplebuilding.cover.description": "Automatically fills chiseled blocks when placing them.",
   "enchantment.simplebuilding.bridge": "Bridge",
+    "enchantment.simplebuilding.bridge.description": "Places blocks beneath the player when sneaking.",
   "enchantment.simplebuilding.linear": "Linear",
+    "enchantment.simplebuilding.linear.description": "Places blocks in a straight line when sneaking.",
   "enchantment.simplebuilding.tailwind": "Tailwind",
   "enchantment.simplebuilding.tailwind.description": "Increases the speed of ridden mobs.",
   "enchantment.simplebuilding.leaping": "Leaping",
@@ -104,10 +116,12 @@
   "enchantment.simplebuilding.drawer": "Drawer",
   "enchantment.simplebuilding.drawer.description": "Increases the storage capacity of chests and bundles.",
   "enchantment.simplebuilding.versatility": "Versatility",
-  "enchantment.simplebuilding.versatility.desc": "Swaps to the best tool when sneaking.",
+  "enchantment.simplebuilding.versatility.description": "Allows the tool to work on more block types.",
 
   "enchantment.simplebuilding.break_through": "Break Through",
+    "enchantment.simplebuilding.break_through.description": "Allows the sledgehammer to break blocks that are normally unbreakable.",
   "enchantment.simplebuilding.color_palette": "Color Palette",
+    "enchantment.simplebuilding.color_palette.description": "Allows the chisel to transform more block types based on dye color.",
   "enchantment.simplebuilding.double_jump": "Air Jump",
   "enchantment.simplebuilding.double_jump.description": "Allows the player to perform an additional jump.",
 
@@ -154,6 +168,12 @@
   "text.autoconfig.simplebuilding.option.enchantments.horseJump.jumpStrengthMultiplier.@Tooltip": "Jump strength multiplier per enchantment level on horse armor (Default: 0.20).",
 
   "text.autoconfig.simplebuilding.option.tools.buildingHighlightOpacity": "Building Wand Highlight Opacity",
+
+  "text.autoconfig.simplebuilding.option.tools.invertBundleInteractions": "Invert Bundle Interactions",
+    "text.autoconfig.simplebuilding.option.tools.invertBundleInteractions.@Tooltip": "If true sneaking while using bundles will perform the opposite action (insert vs extract).",
+
+  "text.autoconfig.simplebuilding.option.disableDoubleJump": "Disable Double Jump",
+    "text.autoconfig.simplebuilding.option.tools.disableDoubleJump.@Tooltip": "If true the Double Jump enchantment will be disabled.",
 
   "block.simplebuilding.reinforced_chest": "Reinforced Chest",
   "item.simplebuilding.reinforced_chest": "Reinforced Chest",
