some bugfixes and lang files updated

--- a/src/main/resources/assets/simplebuilding/lang/de_de.json
+++ b/src/main/resources/assets/simplebuilding/lang/de_de.json
@@ -82,7 +82,7 @@
   "itemgroup.simplebuilding.building_items": "Baugegenstände",
 
   "enchantment.simplebuilding.fast_chiseling": "Schnelles Meißeln",
-  "enchantment.simplebuilding.constructors_touch": "Berührung des Konstrukteurs",
+  "enchantment.simplebuilding.constructors_touch": "Konstrukteursgriff",
   "enchantment.simplebuilding.range": "Reichweite",
 
   "enchantment.simplebuilding.deep_pockets": "Tiefe Taschen",
